@@ -1,4 +1,9 @@
 
+Code:
+- make the order of "cache, db, datadir" identical 
+  accross the various widgets (e.g. AppDetailsView
+  and AppStore use different ordering)
+
 Webkit:
 - xpm images can not be loaded
 - the human icons for the categories are only 24x24
